# mcp-excel-service

./: .gitignore  README.md  azure.yaml  package.json  run-inspector.ps1
.github/: copilot-instructions.md
config/: README.md
docs/: AZURE_DEPLOYMENT.md  FOUNDRY_AGENT_INSTRUCTIONS.md  FOUNDRY_INTEGRATION.md
infra/mcp-server/: container-app.bicep  main.bicep  main.parameters.json
mcp-server/: Dockerfile  config.py  pyproject.toml  requirements.txt  server.py  test_server.py
scripts/: deploy-mcp-server.ps1  register-app.ps1
